--- a/client/package.json
+++ b/client/package.json
@@ -8,13 +8,16 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "dompurify": "^2.4.0",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "moment": "^2.29.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-quill": "^2.0.0",
-    "react-router-dom": "^6.4.1",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
+    "sort-by": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
