--- a/api/package.json
+++ b/api/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "server": "node index.js",
     "start": "nodemon index.js"
   },
   "keywords": [],
@@ -16,7 +17,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoos": "^0.0.1-security",
+    "mongoose": "^7.4.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20"
