--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
   "author": "Guelsuem",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
