--- a/api/package.json
+++ b/api/package.json
@@ -21,7 +21,9 @@
     "mongoose": "^7.4.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "path": "^0.12.7",
+    "url": "^0.11.1"
   },
   "repository": {
     "type": "git",
