--- a/api/package.json
+++ b/api/package.json
@@ -1,22 +1,32 @@
 {
   "name": "api",
   "version": "1.0.0",
-  "description": "",
+  "description": "backend",
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "server": "node index.js",
     "start": "nodemon index.js"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Guelsuem",
+  "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
-    "express": "^4.18.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^7.4.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "path": "^0.12.7",
+    "url": "^0.11.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "backend"
   }
 }
