--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,1 @@
-MONGO_URL = mongodb+srv://karyen:ol1OTfGK1vH7h9Ei@blog-app.muqb3v4.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://julia:kSj1ZmaoE2y07gWn@blog-app.muqb3v4.mongodb.net/?retryWrites=true&w=majority
